# Engine

./: .clang-format  .gitignore  CMakeLists.txt  gpu_info.txt  imgui.ini  post-build.bat  todo.txt
app/: CMakeLists.txt
app/src/: entry.cpp  main.cpp
assets/: bindings.slang  common.slang  lib.slang  shader.slang
assets/materials/: test_material.kmt  test_ui_material.kmt
assets/models/: f  helmet.gltf  monkey.glb  monkey.gltf  test glb json
assets/models_old/: cube.gltf
assets/shaders/: Builtin.MaterialShader.frag.glsl  Builtin.MaterialShader.frag.spv  Builtin.MaterialShader.vert.glsl  Builtin.MaterialShader.vert.spv  Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl  Builtin.UIShader.frag.glsl  Builtin.UIShader.vert.glsl  axis.frag  axis.vert  axis_shader.frag  axis_shader.vert  color.frag  color.vert  color_shader.frag  color_shader.vert  com.slang  compute.comp  compute.frag  compute.vert  cubemap.frag  cubemap.slang  cubemap_shader.frag  cubemap_shader.vert  e_color.frag  e_color.slang  e_color.vert  e_texture.frag  e_texture.slang  e_texture.vert  e_vert_color.slang  e_vert_color.vert  global.vert.glsl  grid.frag  grid.vert  grid_shader.frag  grid_shader.vert  lib.slang  line.frag  line.slang  (+22 more)
assets/shaders_old/: compute.frag  cubemap.vert  e_texture.frag  line.frag  line.vert  screen.frag  ui.frag  ui.vert
bin copy/: engine.lib  game.lib  text
check/: check.h
core/: CMakeLists.txt
core/src/: asserts.h  clock.h  defines.h  logger.cpp  logger.h  maths.h  memory.cpp  memory.h  os.h  platform.h  strings.cpp  strings.h
core/src/containers/: hashtable.cpp
core/src/core/: asserts.h  clock.cpp  clock.h  logger.h  memory.cpp  memory.h  strings.cpp  strings.h
core/src/math/: math_types.h  maths.cpp  maths.h
core/src/os/: os_win32.cpp
core/src/platform/: filesystem.cpp  filesystem.h  platform.h  platform_win32.cpp
engine/: CMakeLists.txt
engine/src/: app_types.h  application_type.h  asset_watch.cpp  asset_watch.h  components.h  defines.h  ecs.h  ecs_archetype.h  engine.cpp  engine.h  entity.cpp  entity.h  entry.h  event.cpp  event.h  freelist.cpp  freelist.h  input.cpp  input.h  input_types.h  lib.h  logger.cpp  logger.h  maths.h  memory.cpp  memory.h  network.h  network_cpp.h  object.cpp  object.h  os.h  os_win32.cpp  str.cpp  str.h  strings.cpp  test.cpp  test.h  test1.cpp  test1.h  ui.cpp  (+2 more)
engine/src/base/: darray.cpp  darray.h  defines.h  hashmap.cpp  hashmap.h  hashtable.cpp  hashtable.h  logger.cpp  logger.h  math_types.h  maths.h  memory.cpp  memory.h  os.h  sparse_set.h  str.cpp  str.h  strings.cpp  strings.h
engine/src/base/os/: event.cpp  event.h  input.cpp  input.h  os_win32.cpp
engine/src/containers/: hashtable.cpp  hashtable.h
engine/src/math/: math_types.h  maths.cpp
engine/src/old/: ecs_archetype.h
engine/src/os/: os_win32.cpp
engine/src/render/: r_backend.cpp  r_backend.h  r_frontend.cpp  r_frontend.h  r_types.h  r_types.inl
engine/src/render/vulkan/: te.cpp  temp.h  vk_api.cpp  vk_backend..cpp  vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_device.cpp  vk_device.h  vk_draw.cpp  vk_draw.h  vk_fence.cpp  vk_fence.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_geometry.cpp  vk_image.cpp  vk_image.h  vk_imgui.cpp  vk_os.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_shader.cpp  vk_shader.h  vk_shader_utils.cpp  vk_shader_utils.h  vk_swapchain.cpp  vk_swapchain.h  vk_sync.cpp  vk_types.h  vk_utils.cpp  vk_utils.h  vk_win32.cpp
engine/src/render/vulkan/shaders/: vk_material_shader.cpp  vk_material_shader.h  vk_ui_shader.cpp  vk_ui_shader.h
engine/src/renderer/: renderer_backend.cpp  renderer_backend.h  renderer_frontend.cpp  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_platform.h  vulkan_platform_win32.cpp  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader_utils.cpp  vulkan_shader_utils.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_types.inl  vulkan_utils.cpp  vulkan_utils.h
engine/src/renderer/vulkan/shaders/: vulkan_material_shader.cpp  vulkan_material_shader.h  vulkan_object_shader.cpp  vulkan_object_shader.h
engine/src/res/: res_types.h
engine/src/res/loaders/: binary_loader.cpp  binary_loader.h  image_loader.cpp  image_loader.h  loader_utils..cpp  loader_utils.h  material_loader.cpp  material_loader.h
engine/src/resources/: resources_types.h
engine/src/sys/: geometry.cpp  geometry.h  geometry_sys.cpp  geometry_sys.h  material_sys.cpp  material_sys.h  material_system.cpp  material_system.h  res.cpp  res.h  res_sys.cpp  res_sys.h  shader.cpp  shader.h  shader_sys.cpp  shader_sys.h  texture.cpp  texture.h  texture_sys.cpp  texture_sys.h  texture_system.cpp
engine/src/systems/: material_system.cpp  material_system.h  texture_system.cpp  texture_system.h
game/: CMakeLists.txt
game/src/: camera.cpp  camera.h  drawing.cpph  ecs.h  game.cpp  game.cpph  game.h  game_primitives.h  game_types.h  game_ui.cpp  game_ui.h  handmade.cpph  scene.cpp  scene.h
game/src/ecs/: ComponentArray.h  ComponentManager.h  Coordinator.cpp  Coordinator.h  Entity.h  EntityManager.h  SystemManager.h  defines.h  main.cpp
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
platform/: CMakeLists.txt
platform/src/: application.cpp  application.h  entry.cpp  game_types.h
src/: asset_watch.cpp  asset_watch.h  com.cpp  com.h  common.cpp  common.h  compiling_shaders.cpp  event.cpp  event.h  game.cpp  gltf.cpp  json.cpp  lib.h  main.cpp  profiler.cpp  profiler.h  r_types.h  renderer.cpp  renderer.h  states.cpp  test.cpp  thi.ixx  thing.ixx  vk.cpp  vk.h  vk_imgui_cpp.h  vk_new_old.cpp  vk_newnew.cpp  vk_old.cpph
src/base/: array.h  base.cpp  base.cxx  (+37 more)
(+25 files in other folders)
